(executable
 (public_name lintcstubs)
 (libraries lintcstubs_analysis goblint.sites.dune goblint.lib fpath fmt)
 (flags :standard -linkall)
 (package lintcstubs))

; the 'package' *is* a dependency: we want access to the file installed into
; the goblint 'site'
; but also this test is part of a package, hence we need to specify it twice

(install
 (section
  (site
   (goblint conf)))
 (files lintcstubs.json)
 (package lintcstubs))

(cram
 (deps
  %{bin:lintcstubs}
  (package lintcstubs)
  model/ocaml_runtime.model.c)
 (package lintcstubs))

(rule
 (alias foo)
 (deps
  (glob_files_rec *.o)
  (glob_files_rec *.ml)
  (sandbox always)
  (source_tree .))
 (action
  (run dune describe)))
