; compiler-libs has unstable API, ensure only one module uses it to simplify
; maintenance

(library
 (package lintcstubs-gen)
 (name shapes_of_types)
 (modules shapes_of_types)
 (libraries compiler-libs.common lintcstubs-arity.primitives_of_cmt))

(executable
 (public_name lintcstubs_genwrap)
 (modules lintcstubs_genwrap)
 (libraries lintcstubs-arity.primitives_of_cmt shapes_of_types)
 (package lintcstubs-gen))

(rule
 (target genwrap_test.model.c)
 (deps
  (:cmt
   (glob_files %{ocaml_where}/*.cmt))
  (:linter %{bin:lintcstubs_genwrap}))
 (action
  (with-stdout-to
   %{target}
   (run %{linter} %{cmt}))))

; run both header generators: good way to test that they agree
; on the bytecode prototypes!

(rule
 (deps
  (:gen1 %{bin:lintcstubs_arity})
  (:gen2 %{bin:lintcstubs_arity_cmt})
  (:cmt_files
   (glob_files %{ocaml_where}/*.cmt))
  (:mlfiles
   (glob_files %{ocaml_where}/*.ml)))
 (action
  (with-stdout-to
   primitives.h
   (progn
    (run %{gen1} %{mlfiles})
    (run %{gen2} %{cmt_files})))))

; check that the model compiles with usual compiler

(library
 (package lintcstubs-gen)
 (name genwrap_test)
 (modules)
 (foreign_stubs
  (language c)
  (flags
   (:standard -Werror-implicit-function-declaration -Wall))
  (names genwrap_test.model)))