(executable
 (public_name lintcstubs_gen_rules)
 (modules lintcstubs_gen_rules dune_stanzas dune_rules)
 (package lintcstubs)
 (lint
  (pps ppx_sexp_conv))
 (libraries sexplib sexplib0 fpath unix unionFind fmt))

(cram
 (deps
  (package lintcstubs)
  %{bin:lintcstubs_gen_rules})
 (package lintcstubs))
