(executable
 (name parse_test)
 (libraries dune_rules))

(subdir
 example
 (copy_files# ../../../example/dune2/*.{ml,c})
 (copy_files ../../../example/dune2/dune))

(cram
 (deps
  %{bin:lintcstubs_primitives_of_ml}
  %{bin:lintcstubs_genrules}
  %{bin:lintcstubs_gen_find_targets}
  parse_test.exe
  (glob_files_rec example/*))
 (package lintcstubs))
